testsuite/tests/indexed-types/should_fail/Overlap4.stderr

Overlap4.hs:7:12: error:
    • Expecting one more argument to ‘Maybe’
      Expected a type, but ‘Maybe’ has kind ‘* -> *’
    • In the type ‘Maybe’
      In the type family declaration for ‘F’
